--- a/app/public/home.html
+++ b/app/public/home.html
@@ -20,7 +20,7 @@
       <h1><i class="fa fa-facebook-square" aria-hidden="true"></i> Friendly Flower Finder</h1>
       <hr>
       <h2>Answer a few basic questions. </h2>
-      <h2>Then... a Friendly Flower with your greatest compatibility will be found for you!</h2>
+      <h2>Then... a Friendly Flower which matches your greatest compatibility will be populated for you!</h2>
       <br>
 
       <div>
@@ -31,7 +31,10 @@
 
     <footer class="footer">
       <div class="container">
-        <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/afhaque/friendfinder">GitHub Repo</a></p>
+        <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/stevearchuleta/friendFinder">GitHub Repo</a></p><br><br>
+      
+        <p><a href="/api/friends">API Friends List</a> | <a href="https://stevearchuleta.github.io/friendFinder/">GitHub Repo</a></p>
+        
       </div>
     </footer>
 
